fix(ui): fixed alignment in levequests page

--- a/apps/client/src/app/pages/levequests/levequests/levequests.component.less
+++ b/apps/client/src/app/pages/levequests/levequests/levequests.component.less
@@ -74,6 +74,7 @@
 
   .list-center {
     text-align: center;
+    width: 50px;
   }
 
   .amount {
